<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search"
            android:id="@+id/btnSearch"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtSearch"
            android:layout_toRightOf="@+id/btnSearch"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtInfo"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btnSearch"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler"
            android:layout_below="@+id/txtInfo"
            android:paddingTop="10dp">
        </android.support.v7.widget.RecyclerView>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recycler"
            android:id="@+id/progress"
            android:visibility="gone"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</LinearLayout>